[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[lib]


[[bin]]
name = "day1"
path = "src/aoc2024/day1.rs"

[[bin]]
name = "day1_2"
path = "src/aoc2024/day1_2.rs"

[[bin]]
name = "day2"
path = "src/aoc2024/day2.rs"

[[bin]]
name = "day2_2"
path = "src/aoc2024/day2_2.rs"

[[bin]]
name = "day3"
path = "src/aoc2024/day3.rs"

[[bin]]
name = "day3_2"
path = "src/aoc2024/day3_2.rs"

[[bin]]
name = "day4"
path = "src/aoc2024/day4.rs"

[[bin]]
name = "day5"
path = "src/aoc2024/day5.rs"

[dependencies]
colored = "2.1.0"
regex = "1.11.1"
