[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[lib]


[[bin]]
name = "day1"
path = "src/aoc2024/day1.rs"

[[bin]]
name = "day1_2"
path = "src/aoc2024/day1_2.rs"

[[bin]]
name = "day2"
path = "src/aoc2024/day2.rs"

[[bin]]
name = "day2_2"
path = "src/aoc2024/day2_2.rs"

[[bin]]
name = "day3"
path = "src/aoc2024/day3.rs"

[[bin]]
name = "day3_2"
path = "src/aoc2024/day3_2.rs"

[[bin]]
name = "day4"
path = "src/aoc2024/day4.rs"

[[bin]]
name = "day5"
path = "src/aoc2024/day5.rs"

[[bin]]
name = "day5_2"
path = "src/aoc2024/day5_2.rs"

[[bin]]
name = "day6"
path = "src/aoc2024/day6.rs"

[[bin]]
name = "day7"
path = "src/aoc2024/day7.rs"

[[bin]]
name = "day8"
path = "src/aoc2024/day8.rs"

[dependencies]
colored = "2.1.0"
regex = "1.11.1"
